adding simple support for scss
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/cssclean/tests/testdata/1/style.clean.css
+++ b/cssclean/tests/testdata/1/style.clean.css
@@ -1,4 +1,4 @@
-:root {
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,700,900);:root {
   --color-red: #c0392b;
   --color-red-dark: #962d22;
   --color-red-light: #d65548;
